--- a/index.html
+++ b/index.html
@@ -822,13 +822,13 @@
     </audio>
     
     <audio id="voice-note-1">
-        <source src="voice-note-1.mp3" type="audio/mp3">
+        <source src="voice-note-1.mp3" type="audio/mpeg">
     </audio>
     <audio id="voice-note-2">
-        <source src="voice-note-2.mp3" type="audio/mp3">
+        <source src="voice-note-2.mp3" type="audio/mpeg">
     </audio>
     <audio id="final-voice-rec">
-        <source src="final-voice-rec.mp3" type="audio/mp3">
+        <source src="final-voice-rec.mp3" type="audio/mpeg">
     </audio>
 
     <script>
@@ -1135,4 +1135,5 @@ Imad 💗`;
 
     </script>
 </body>
+
 </html>
